# CrashyCars

./: CMakeLists.txt  Makefile  README.md
shaders/: car.fs.glsl  water.fs.glsl
src/: common.hpp  components.hpp  main.cpp  physics_system.cpp  physics_system.hpp  render_system.cpp  render_system.hpp  state_system.cpp  state_system.h  tiny_ecs_registry.hpp  world_init.cpp  world_init.hpp  world_system.cpp  world_system.hpp
